public/traefik/argo-Ingress-route.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
    - match: Host(`argocd.test.com`)
      priority: 10
      middlewares:
        - name: redirect-https
      kind: Rule
      services:
      - name: argocd-server
        port: 80
    - match:  Host(`argocd.test.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: redirect-https
      kind: Rule
      services:
      - name: argocd-server
        port: 80
        scheme: https  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-tls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.test.com`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.test.com`) && Headers(`Content-Type`, `application/grpc`) 
      kind: Rule
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: https
  tls:
    secretName: argocd-tls 
   #certResolver: default
